--- a/github/workflows/ci.yaml
+++ b/github/workflows/ci.yaml
@@ -1,19 +1,14 @@
-# CICD using GitHub actions
-
 name: CI
 
-# Exclude the workflow to run on changes to the helm chart
 on:
   push:
     branches:
       - main
     paths-ignore:
       - 'helm/**'
-      - 'k8s/**'
       - 'README.md'
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
@@ -21,32 +16,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Go 1.24
+    - name: Set up Go 1.21
       uses: actions/setup-go@v2
       with:
-        go-version: 1.24
+        go-version: 1.21
 
-    - name: Build
+    - name: Build Go app
       run: go build -o go-web-app
 
-    - name: Test
+    - name: Run tests
       run: go test ./...
-  
-  code-quality:
+
+  docker-push:
     runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: Run golangci-lint
-      uses: golangci/golangci-lint-action@v6
-      with:
-        version: v1.56.2
-  
-  push:
-    runs-on: ubuntu-latest
-
     needs: build
 
     steps:
@@ -54,7 +36,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Login to DockerHub
       uses: docker/login-action@v3
@@ -62,33 +44,32 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and Push action
-      uses: docker/build-push-action@v6
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
       with:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-web-app:${{github.run_id}}
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/go-web-app:${{ github.run_id }}
 
-  update-newtag-in-helm-chart:
+  update-helm-tag:
     runs-on: ubuntu-latest
-
-    needs: push
+    needs: docker-push
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.TOKEN }}
+        token: ${{ secrets.TOKEN }}  # Your GitHub PAT
 
-    - name: Update tag in Helm chart
+    - name: Update image tag in Helm chart
       run: |
-        sed -i 's/tag: .*/tag: "${{github.run_id}}"/' helm/go-web-app-chart/values.yaml
+        sed -i 's/tag: .*/tag: "${{ github.run_id }}"/' helm/go-web-app-chart/values.yaml
 
-    - name: Commit and push changes
+    - name: Commit and push updated Helm chart
       run: |
         git config --global user.email "susangod6@gmail.com"
         git config --global user.name "Susan-creator"
         git add helm/go-web-app-chart/values.yaml
-        git commit -m "Update tag in Helm chart"
+        git commit -m "Update image tag to ${{ github.run_id }}"
         git push
